--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,8 @@
   "awards.group_yamiPuzzleMaxDialoguesCount": "Yami Question Count Related",
   "awards.header": "Awards",
   "awards.title": "Awards Page",
+  "channel.description": "A place for users to communicate in Cindy.",
+  "channel.title": "Channel: {name}",
   "comments.description": "Discover interesting puzzles with comments by users in Cindy!",
   "comments.header": "Comments List",
   "comments.title": "Comments",
@@ -42,6 +44,7 @@
   "common.close": "Close",
   "common.confirm": "Confirm",
   "common.continue": "Continue",
+  "common.create": "Create",
   "common.default": "Default",
   "common.desc": "Descending",
   "common.display": "Display",
@@ -75,8 +78,13 @@
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.chat.chatroomCreated": "Successfully created chatroom {name}",
+  "components.chat.chatroomDescription": "Chatroom Description",
+  "components.chat.chatroomName": "Chatroom Name",
+  "components.chat.currentChannel": "Current: {name}",
   "components.chat.deleteFromFavoriteChatrooms": "Delete From Favorite Chatrooms",
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
+  "components.chat.log": "Logs",
   "components.chat.noDescription": "This chatroom does not have a description.",
   "components.chat.noLogs": "There are no logs here",
   "components.chat.noSelfDM": "You cannot send message to yourself.",
