--- a/lang/ja.json
+++ b/lang/ja.json
@@ -30,6 +30,8 @@
   "awards.group_yamiPuzzleMaxDialoguesCount": "闇問題質問数関連",
   "awards.header": "称号一覧",
   "awards.title": "称号一覧ページ",
+  "channel.description": "ユーザー交流の場",
+  "channel.title": "チャンネル：{name}",
   "comments.description": "ユーザーのコメントから面白い水平思考問題を探しましょう！",
   "comments.header": "コメント一覧",
   "comments.title": "コメント一覧",
@@ -42,6 +44,7 @@
   "common.close": "閉じる",
   "common.confirm": "確認",
   "common.continue": "続行",
+  "common.create": "作成",
   "common.default": "デフォルト",
   "common.desc": "降順",
   "common.display": "ディスプレイ",
@@ -75,8 +78,13 @@
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.chat.chatroomCreated": "チャンネル {name} を無事に作成しました。",
+  "components.chat.chatroomDescription": "チャンネル説明",
+  "components.chat.chatroomName": "チャンネル名",
+  "components.chat.currentChannel": "現在のチャンネル: {name}",
   "components.chat.deleteFromFavoriteChatrooms": "お気に入り削除",
   "components.chat.favoriteChatrooms": "お気に入りチャンネル",
+  "components.chat.log": "ログ",
   "components.chat.noDescription": "このチャンネルは説明がありません。",
   "components.chat.noLogs": "ここにチャットメッセージのログがありません",
   "components.chat.noSelfDM": "あなたは自分にダイレクトメッセージを送信することはできません",
