Add communication button to toolbar

--- a/lang/en.json
+++ b/lang/en.json
@@ -78,9 +78,11 @@
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.chat.channels": "Channels",
   "components.chat.chatroomCreated": "Successfully created chatroom {name}",
   "components.chat.chatroomDescription": "Chatroom Description",
   "components.chat.chatroomName": "Chatroom Name",
+  "components.chat.createChannel": "Create Channel",
   "components.chat.currentChannel": "Current: {name}",
   "components.chat.deleteFromFavoriteChatrooms": "Delete From Favorite Chatrooms",
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
@@ -240,6 +242,8 @@
   "tags.tagName": "Tag Name",
   "tags.tagPuzzleCount": "Puzzle Count",
   "tags.title": "Tags",
+  "toolbar.chatroom": "Chatroom",
+  "toolbar.communication": "Society",
   "toolbar.eula": "EULA",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
