--- a/lang/ja.json
+++ b/lang/ja.json
@@ -78,9 +78,11 @@
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.chat.channels": "チャンネル切替",
   "components.chat.chatroomCreated": "チャンネル {name} を無事に作成しました。",
   "components.chat.chatroomDescription": "チャンネル説明",
   "components.chat.chatroomName": "チャンネル名",
+  "components.chat.createChannel": "チャンネル作成",
   "components.chat.currentChannel": "現在のチャンネル: {name}",
   "components.chat.deleteFromFavoriteChatrooms": "お気に入り削除",
   "components.chat.favoriteChatrooms": "お気に入りチャンネル",
@@ -240,6 +242,8 @@
   "tags.tagName": "タグ名",
   "tags.tagPuzzleCount": "問題数",
   "tags.title": "タグ一覧",
+  "toolbar.chatroom": "チャットルーム",
+  "toolbar.communication": "交流",
   "toolbar.eula": "利用規約",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
