--- a/lang/ja.json
+++ b/lang/ja.json
@@ -20,6 +20,7 @@
   "awards.description": "称号をゲットしよう！",
   "awards.group_goodQuestionCount": "良質数関連",
   "awards.group_mixed": "複数条件あり",
+  "awards.group_others": "その他",
   "awards.group_puzzleCount": "出題数関連",
   "awards.group_puzzleGenreCount": "ジャンル別出題数関連",
   "awards.group_puzzleStarCount": "問題スター数関連",
