Add github and twitter icons

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -246,6 +246,7 @@
   "toolbar.chatroom": "チャットルーム",
   "toolbar.communication": "交流",
   "toolbar.eula": "利用規約",
+  "toolbar.help": "ヘルプ",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.settings": "設定",
