--- a/lang/en.json
+++ b/lang/en.json
@@ -246,6 +246,7 @@
   "toolbar.chatroom": "Chatroom",
   "toolbar.communication": "Society",
   "toolbar.eula": "EULA",
+  "toolbar.help": "Help",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.settings": "Settings",
