--- a/lang/ja.json
+++ b/lang/ja.json
@@ -18,6 +18,7 @@
   "auth.signup": "登録",
   "auth.username": "ユーザー名",
   "awards.description": "称号をゲットしよう！",
+  "awards.group_age": "Cindy 通関連",
   "awards.group_goodQuestionCount": "良質数関連",
   "awards.group_mixed": "複数条件あり",
   "awards.group_others": "その他",
