feat: Add footprints tab to profile

--- a/lang/en.json
+++ b/lang/en.json
@@ -265,6 +265,7 @@
   "tooltip.scrollToBottom": "Scroll To Bottom",
   "tooltip.scrollToTop": "Scroll To Top",
   "tooltip.stamp": "Stamp",
+  "tooltip.tab": "Tab",
   "tooltip.underline": "Underline",
   "user.comments_posted": "Comments Posted",
   "user.comments_received": "Comments Received",
@@ -272,6 +273,7 @@
   "user.description": "User Profile in Cindy",
   "user.profileIsEmpty": "This user does not have a profile",
   "user.profileOf": "{nickname}'s Profile",
+  "user.tab_footprints": "Footprints",
   "user.tab_info": "Info",
   "user.tab_puzzles": "Puzzles",
   "user.title": "User Profile",
