--- a/lang/ja.json
+++ b/lang/ja.json
@@ -265,6 +265,7 @@
   "tooltip.scrollToBottom": "下へ",
   "tooltip.scrollToTop": "上へ",
   "tooltip.stamp": "スタンプ",
+  "tooltip.tab": "タブ",
   "tooltip.underline": "下線",
   "user.comments_posted": "コメント",
   "user.comments_received": "獲得コメント",
@@ -272,6 +273,7 @@
   "user.description": "ユーザープロフィールです",
   "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
   "user.profileOf": "{nickname} のプロフィール",
+  "user.tab_footprints": "参加履歴",
   "user.tab_info": "基本情報",
   "user.tab_puzzles": "問題",
   "user.title": "ユーザープロフィール",
