feat: Add Confirm Page to PuzzleAddForm

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -112,6 +112,7 @@
   "components.puzzle.genre_littleAlbat": "亀夫君問題",
   "components.puzzle.genre_others": "新＆形式",
   "components.puzzle.genre_twentyQuestions": "２０の扉",
+  "components.puzzle.gotoConfirm": "確認ページへ",
   "components.puzzle.grotesque": "グロあり",
   "components.puzzle.haveQuestionsToBeAnswered": "新質問あり！",
   "components.puzzle.hint": "ヒント",
@@ -210,6 +211,7 @@
   "search.order_starCount": "スター投票数",
   "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
+  "setting.confirmCreatePuzzle": "出題確認ページ",
   "setting.editQuestionTrigger": "質問（編集）",
   "setting.multicol": "複数列表示",
   "setting.notification": "通知設定",
