--- a/lang/en.json
+++ b/lang/en.json
@@ -112,6 +112,7 @@
   "components.puzzle.genre_littleAlbat": "Little Albat",
   "components.puzzle.genre_others": "Others",
   "components.puzzle.genre_twentyQuestions": "Twenty Questions",
+  "components.puzzle.gotoConfirm": "Go to confirm page",
   "components.puzzle.grotesque": "Grotesque",
   "components.puzzle.haveQuestionsToBeAnswered": "New Question",
   "components.puzzle.hint": "Hint",
@@ -210,6 +211,7 @@
   "search.order_starCount": "Star Count",
   "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
+  "setting.confirmCreatePuzzle": "Confirm Before Create Puzzle",
   "setting.editQuestionTrigger": "Edit Question",
   "setting.multicol": "Prefer Multiple Columns",
   "setting.notification": "Notification",
