feat: Add option to prevent further warning on grotesque message

--- a/lang/en.json
+++ b/lang/en.json
@@ -57,6 +57,7 @@
   "common.loadMore": "Load More",
   "common.loginOrSignup": "Please {login} or {signup} to join",
   "common.next": "Next",
+  "common.noMoreWarning": "Do not show this warning any more",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
   "common.others": "Others",
@@ -224,6 +225,7 @@
   "setting.sendMessageTrigger": "Send Message Trigger",
   "setting.sendQuestionTrigger": "Send Question",
   "setting.settings": "Settings",
+  "setting.showGrotesqueWarning": "Show Grotesque Warning",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
   "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
