--- a/lang/ja.json
+++ b/lang/ja.json
@@ -57,6 +57,7 @@
   "common.loadMore": "もっと見る",
   "common.loginOrSignup": "参加するには {login} または {signup} してください",
   "common.next": "次＞",
+  "common.noMoreWarning": "以後表示しない",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
   "common.others": "その他",
@@ -224,6 +225,7 @@
   "setting.sendMessageTrigger": "メッセージ送信キー",
   "setting.sendQuestionTrigger": "質問",
   "setting.settings": "設定",
+  "setting.showGrotesqueWarning": "グロ注意表示",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
   "showcases.puzzle.a2": "NO",
   "showcases.puzzle.content": "消しゴムといえば、書いた文字を消すための文房具であることは言うまでもないことだ。\n\nだがAは、“まだ何も書かれていない白紙にメッセージを残すため”、消しゴムを手に持った。\n\n一体なぜ？",
