feat: Add Replays to Puzzle Subbar

--- a/lang/en.json
+++ b/lang/en.json
@@ -207,7 +207,11 @@
   "ranking.userPuzzleRankingWithMonth": "Users with most puzzles in {date}",
   "ranking.weeklyRanking": "Weekly Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
+  "replay.notExistDescription": "This replay does not exist!",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
+  "replays.description": "Replay old puzzles, as many times as you want",
+  "replays.header": "Replays",
+  "replays.title": "Puzzle Replays",
   "search.description": "Search old puzzles in Cindy",
   "search.header": "Search Puzzles",
   "search.order_bookmarkCount": "Bookmark Count",
