--- a/lang/ja.json
+++ b/lang/ja.json
@@ -207,7 +207,11 @@
   "ranking.userPuzzleRankingWithMonth": "{date}の間最も出題したユーザー",
   "ranking.weeklyRanking": "週間ランキング",
   "replay.description": "古い名作をリプレイしましょう",
+  "replay.notExistDescription": "このリプレイ問題は存在しません",
   "replay.title": "問題リプレイ",
+  "replays.description": "昔の良問をもう一回やろう！",
+  "replays.header": "リプレイ一覧",
+  "replays.title": "リプレイ",
   "search.description": "Cindyの過去問を見よう！",
   "search.header": "過去問検索",
   "search.order_bookmarkCount": "ブクマ数",
