feat: Add japanese translations

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,8 @@
   "add_puzzle.header": "Create Puzzle",
   "add_puzzle.publishPuzzle": "Publish this puzzle",
   "add_puzzle.title": "Puzzle Create Page",
+  "add_replay.autoDel": "Auto Delete",
+  "add_replay.autoSaved": "Auto Saved",
   "add_replay.description": "Create replay from puzzle in Cindy!",
   "add_replay.header": "Create Replay",
   "add_replay.title": "Replay Create Page",
@@ -43,12 +45,14 @@
   "common.asc": "Ascending",
   "common.back": "Back",
   "common.big": "Big",
+  "common.cannotBeEmptyErr": "{name} cannot be empty!",
   "common.change": "Change",
   "common.close": "Close",
   "common.confirm": "Confirm",
   "common.continue": "Continue",
   "common.create": "Create",
   "common.default": "Default",
+  "common.deleted": "Deleted",
   "common.desc": "Descending",
   "common.display": "Display",
   "common.doNotNotifyAgain": "Do not notify me again",
@@ -74,6 +78,7 @@
   "common.send": "Send",
   "common.small": "Small",
   "common.sort": "Sort",
+  "common.submitted": "Submitted!",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
@@ -98,6 +103,8 @@
   "components.chat.noSelfDM": "You cannot send message to yourself.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
   "components.chat.publicChatrooms": "Public Chatrooms",
+  "components.dialogue.answer": "Answer",
+  "components.dialogue.question": "Question",
   "components.puzzle.addBookmarks": "Add Bookmarks",
   "components.puzzle.addComment": "Add Comment",
   "components.puzzle.addStars": "Add Stars",
@@ -144,6 +151,12 @@
   "components.puzzle.yourBookmarks": "Your Bookmarks",
   "components.puzzle.yourComment": "Your Comment",
   "components.puzzle.yourStars": "Your Stars",
+  "components.replay.clue": "Clue",
+  "components.replay.keyword": "Keyword",
+  "components.replay.milestone_desc": "Description",
+  "components.replay.milestone_handle": "Handle",
+  "components.replay.milestone_name": "Name",
+  "components.replay.original": "Original Puzzle",
   "components.user.anonymousUser": "Anonymous User",
   "components.user.commentCount": "Comments",
   "components.user.dialogueCount": "Dialogues",
