--- a/lang/ja.json
+++ b/lang/ja.json
@@ -6,6 +6,8 @@
   "add_puzzle.header": "出題画面",
   "add_puzzle.publishPuzzle": "出題",
   "add_puzzle.title": "出題ページ",
+  "add_replay.autoDel": "自動フィルタ",
+  "add_replay.autoSaved": "リプレイ問題を保存しました",
   "add_replay.description": "問題のリプレイを作ろう！",
   "add_replay.header": "リプレイ作成ページ",
   "add_replay.title": "リプレイ作成ページ",
@@ -43,12 +45,14 @@
   "common.asc": "昇順",
   "common.back": "戻る",
   "common.big": "大",
+  "common.cannotBeEmptyErr": "{name} を入力してください",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.confirm": "確認",
   "common.continue": "続行",
   "common.create": "作成",
   "common.default": "デフォルト",
+  "common.deleted": "削除しました",
   "common.desc": "降順",
   "common.display": "ディスプレイ",
   "common.doNotNotifyAgain": "以後表示しない",
@@ -74,6 +78,7 @@
   "common.send": "送信",
   "common.small": "小",
   "common.sort": "並び替え",
+  "common.submitted": "送信しました",
   "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
   "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
@@ -98,6 +103,8 @@
   "components.chat.noSelfDM": "あなたは自分にダイレクトメッセージを送信することはできません",
   "components.chat.notExistDescription": "このチャットルームは存在しません",
   "components.chat.publicChatrooms": "公開チャンネル",
+  "components.dialogue.answer": "回答",
+  "components.dialogue.question": "質問",
   "components.puzzle.addBookmarks": "ブクマを追加する",
   "components.puzzle.addComment": "コメントを残す",
   "components.puzzle.addStars": "あなたのスター",
@@ -144,6 +151,12 @@
   "components.puzzle.yourBookmarks": "あなたのブクマ",
   "components.puzzle.yourComment": "あなたのコメント",
   "components.puzzle.yourStars": "あなたのスター",
+  "components.replay.clue": "クルー",
+  "components.replay.keyword": "キーワード",
+  "components.replay.milestone_desc": "説明",
+  "components.replay.milestone_handle": "ハンドル",
+  "components.replay.milestone_name": "名称",
+  "components.replay.original": "元問題",
   "components.user.anonymousUser": "謎の料理人",
   "components.user.commentCount": "コメント数",
   "components.user.dialogueCount": "質問数",
