feat: Add Share button to puzzles

--- a/lang/en.json
+++ b/lang/en.json
@@ -53,6 +53,7 @@
   "common.doNotNotifyAgain": "Do not notify me again",
   "common.editTimes": "[Edited ({count})]",
   "common.enable": "Enable",
+  "common.info": "Information",
   "common.jump": "Jump",
   "common.loadMore": "Load More",
   "common.loginOrSignup": "Please {login} or {signup} to join",
@@ -226,6 +227,12 @@
   "setting.sendQuestionTrigger": "Send Question",
   "setting.settings": "Settings",
   "setting.showGrotesqueWarning": "Show Grotesque Warning",
+  "share.share_puzzle__hashtags": "lateral_thinking",
+  "share.share_puzzle__text": "I'm playing lateral puzzle \"{title}\". Come and join me!\n{body}",
+  "share.share_puzzle__title": "Join me in the lateral thinking puzzle!",
+  "share.share_puzzle_solved__hashtags": "lateral_thinking",
+  "share.share_puzzle_solved__text": "Just found an interesting lateral puzzle \"{title}\".\n{body}",
+  "share.share_puzzle_solved__title": "Found an interesting lateral thinking puzzle!",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
   "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
