--- a/lang/ja.json
+++ b/lang/ja.json
@@ -53,6 +53,7 @@
   "common.doNotNotifyAgain": "以後表示しない",
   "common.editTimes": "編集済み({count})",
   "common.enable": "有効にする",
+  "common.info": "情報",
   "common.jump": "移動",
   "common.loadMore": "もっと見る",
   "common.loginOrSignup": "参加するには {login} または {signup} してください",
@@ -226,6 +227,12 @@
   "setting.sendQuestionTrigger": "質問",
   "setting.settings": "設定",
   "setting.showGrotesqueWarning": "グロ注意表示",
+  "share.share_puzzle__hashtags": "ウミガメのスープ",
+  "share.share_puzzle__text": "ウミガメのスープ「{title}」に参加しています、一緒に水平思考しよう！\n{body}",
+  "share.share_puzzle__title": "水平思考問題をやってます！",
+  "share.share_puzzle_solved__hashtags": "ウミガメのスープ",
+  "share.share_puzzle_solved__text": "さっき良い問題を発見しました！\n「{title}」\n{body}",
+  "share.share_puzzle_solved__title": "良い水平思考問題を発見しました！",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
   "showcases.puzzle.a2": "NO",
   "showcases.puzzle.content": "消しゴムといえば、書いた文字を消すための文房具であることは言うまでもないことだ。\n\nだがAは、“まだ何も書かれていない白紙にメッセージを残すため”、消しゴムを手に持った。\n\n一体なぜ？",
