feat: Replace toastify with error component in some components

--- a/lang/en.json
+++ b/lang/en.json
@@ -70,6 +70,7 @@
   "common.others": "Others",
   "common.patron": "Patron",
   "common.prev": "Prev",
+  "common.reload": "Reload",
   "common.reset": "Reset",
   "common.save": "Save",
   "common.saved": "Saved!",
@@ -221,6 +222,7 @@
   "ranking.weeklyRanking": "Weekly Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.notExistDescription": "This replay does not exist!",
+  "replay.puzzleNotSolved": "You cannot create a replay out of an unsolved puzzle!",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
   "replays.description": "Replay old puzzles, as many times as you want",
   "replays.header": "Replays",
