--- a/lang/ja.json
+++ b/lang/ja.json
@@ -70,6 +70,7 @@
   "common.others": "その他",
   "common.patron": "パトロン",
   "common.prev": "＜前",
+  "common.reload": "リロード",
   "common.reset": "リセット",
   "common.save": "セーブ",
   "common.saved": "セーブしました。",
@@ -221,6 +222,7 @@
   "ranking.weeklyRanking": "週間ランキング",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.notExistDescription": "このリプレイ問題は存在しません",
+  "replay.puzzleNotSolved": "この問題がまだ解決されていません。この問題からリプレイを作成することは出来ません。",
   "replay.title": "問題リプレイ",
   "replays.description": "昔の良問をもう一回やろう！",
   "replays.header": "リプレイ一覧",
