--- a/lang/ja.json
+++ b/lang/ja.json
@@ -192,7 +192,8 @@
   "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
   "puzzle.putSolution": "解説を出す",
-  "puzzle.putSolutionConfirm": "あなたは解説を出そうとしています。解説を出すと、このページにいる全員が即時に解説を見れるようになりますが、あなたは解説を編集することができなくなります。この操作は撤回することができません。続けますか？",
+  "puzzle.putSolutionConfirm": "あなたは解説を出そうとしています。解説を出すと、このページにいる全員が即時に解説を見れるようになり、それと同時にあなたは解説を編集することができなくなります。この操作は撤回することができません。続けますか？",
+  "puzzle.putSolutionLongtermYamiConfirm": "あなたは解説を出そうとしています。解説を出すと、このページにいる全員が即時に解説を見れるようになります。この操作は撤回することができません。続けますか？",
   "puzzle.setGrotesque": "グロ注意を表示する",
   "puzzle.setHidden": "非公開にする",
   "puzzle.setHiddenConfirm": "あなたは問題を非公開にしようとしています。問題を非公開にすると、他の人が問題の内容を見れなくなりますが、問題が強制的に解決され、未解決状態に戻すことができません。続けますか？",
