feat(license): Add license setting to puzzles
Squashed commit of the following:

commit bb2fe749276a11327ec01ea505f406ee6e07328e
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Wed Sep 15 14:25:58 2021 +0800

    fix: Fixups for typescript errors

commit 8dda8098e0e41bd524a9d1fedc38a34a1501ff25
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Wed Sep 15 13:28:54 2021 +0800

    feat(license): Add defaultLicense option to settings

commit eb90c39854e31da10e3bb560444461810488f974
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Wed Sep 15 12:20:21 2021 +0800

    chore(trans): Translate license-related messages to japanese

commit 921d5d246d06edeeb16d86da90d30ee1b283dbd0
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Wed Sep 15 12:12:59 2021 +0800

    chore(license): Abstract LicensesButtons from PuzzleAddForm

commit 04bd34223e3c959f1e5e3c69393bc40107069268
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Wed Sep 15 11:47:52 2021 +0800

    feat(license): Add license notice on puzzle page

commit f3608df3c0732c378d2eea1e1a5c335dd65675cc
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Tue Sep 14 19:45:14 2021 +0800

    fix(style): Update layout styling of body page

commit 1b8b2c29f606d79f61531d176a9ad39f7e4a51e0
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Tue Sep 14 19:26:50 2021 +0800

    feat(license): Add help page for license

commit 40edd319e3cd79e037b1ab30bfbd9d70140d1db0
Author: heyrict <xiezh0831@yahoo.co.jp>
Date:   Tue Sep 14 18:09:59 2021 +0800

    feat(license): Add license options to PuzzleAddForm

--- a/lang/en.json
+++ b/lang/en.json
@@ -130,7 +130,10 @@
   "components.puzzle.hint": "Hint",
   "components.puzzle.hintOnly": "{user} only",
   "components.puzzle.lastupdate": "Last Update",
+  "components.puzzle.license": "License",
+  "components.puzzle.licenseSummary": "The content is published under the terms of {license}.",
   "components.puzzle.memo": "Memo",
+  "components.puzzle.nolicenseHint": "No one is permitted to re-distribute the contents in any form without your permission",
   "components.puzzle.replay": "Replay",
   "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
@@ -237,6 +240,7 @@
   "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
   "setting.confirmCreatePuzzle": "Confirm Before Create Puzzle",
+  "setting.defaultLicense": "Default License",
   "setting.editQuestionTrigger": "Edit Question",
   "setting.multicol": "Prefer Multiple Columns",
   "setting.notification": "Notification",
@@ -283,6 +287,7 @@
   "toolbar.eula": "EULA",
   "toolbar.help": "Help",
   "toolbar.home": "Home",
+  "toolbar.licenseHelp": "About license",
   "toolbar.puzzle": "Puzzle",
   "toolbar.settings": "Settings",
   "toolbar.users": "Users",
