--- a/lang/ja.json
+++ b/lang/ja.json
@@ -130,7 +130,10 @@
   "components.puzzle.hint": "ヒント",
   "components.puzzle.hintOnly": "{user} 宛",
   "components.puzzle.lastupdate": "最終回答時間",
+  "components.puzzle.license": "ライセンス",
+  "components.puzzle.licenseSummary": "この作品は {license} の下で公開されています。",
   "components.puzzle.memo": "メモ",
+  "components.puzzle.nolicenseHint": "あなたから明示的に許可を受けない限り、誰もこの作品を複製・転載・改変ことができません。",
   "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solution": "解説文",
   "components.puzzle.solvedAt": "解決時間",
@@ -237,6 +240,7 @@
   "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
   "setting.confirmCreatePuzzle": "出題確認ページ",
+  "setting.defaultLicense": "デフォルトライセンス",
   "setting.editQuestionTrigger": "質問（編集）",
   "setting.multicol": "複数列表示",
   "setting.notification": "通知設定",
@@ -283,6 +287,7 @@
   "toolbar.eula": "利用規約",
   "toolbar.help": "ヘルプ",
   "toolbar.home": "ホーム",
+  "toolbar.licenseHelp": "ライセンスについて",
   "toolbar.puzzle": "問題",
   "toolbar.settings": "設定",
   "toolbar.users": "ユーザー",
