fix: Display quote message if no license is applied

--- a/lang/en.json
+++ b/lang/en.json
@@ -109,6 +109,7 @@
   "components.puzzle.addBookmarks": "Add Bookmarks",
   "components.puzzle.addComment": "Add Comment",
   "components.puzzle.addStars": "Add Stars",
+  "components.puzzle.allRightsReserved": "© {year} {user}",
   "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
   "components.puzzle.comment": "Comment",
@@ -134,6 +135,7 @@
   "components.puzzle.licenseSummary": "The content is published under the terms of {license}.",
   "components.puzzle.memo": "Memo",
   "components.puzzle.nolicenseHint": "No one is permitted to re-distribute the contents in any form without your permission",
+  "components.puzzle.quotePlain": "{title}. Created by {user} at Cindy. (URL: {url}).",
   "components.puzzle.replay": "Replay",
   "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
