--- a/lang/ja.json
+++ b/lang/ja.json
@@ -109,6 +109,7 @@
   "components.puzzle.addBookmarks": "ブクマを追加する",
   "components.puzzle.addComment": "コメントを残す",
   "components.puzzle.addStars": "あなたのスター",
+  "components.puzzle.allRightsReserved": "© {year} {user}. 作者から明示的に許可をもらわない限り、あなたはこの問題を複製・転載・改変することはできません。",
   "components.puzzle.anonymous": "匿名",
   "components.puzzle.bookmark": "ブクマ",
   "components.puzzle.comment": "コメント",
@@ -133,7 +134,8 @@
   "components.puzzle.license": "ライセンス",
   "components.puzzle.licenseSummary": "この作品は {license} の下で公開されています。",
   "components.puzzle.memo": "メモ",
-  "components.puzzle.nolicenseHint": "あなたから明示的に許可を受けない限り、誰もこの作品を複製・転載・改変ことができません。",
+  "components.puzzle.nolicenseHint": "あなたから明示的に許可を受けない限り、誰もこの作品を複製・転載・改変できません。",
+  "components.puzzle.quotePlain": "転載元: 「{title}」　作者: {user} (Cindy)　URL: {url}",
   "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solution": "解説文",
   "components.puzzle.solvedAt": "解決時間",
