--- a/lang/ja.json
+++ b/lang/ja.json
@@ -109,7 +109,7 @@
   "components.puzzle.addBookmarks": "ブクマを追加する",
   "components.puzzle.addComment": "コメントを残す",
   "components.puzzle.addStars": "あなたのスター",
-  "components.puzzle.allRightsReserved": "© {year} {user}. 作者から明示的に許可をもらわない限り、あなたはこの問題を複製・転載・改変することはできません。",
+  "components.puzzle.allRightsReserved": "© {year} {user}　作者から明示的に許可をもらわない限り、あなたはこの問題を複製・転載・改変することはできません。",
   "components.puzzle.anonymous": "匿名",
   "components.puzzle.bookmark": "ブクマ",
   "components.puzzle.comment": "コメント",
