--- a/lang/en.json
+++ b/lang/en.json
@@ -188,6 +188,7 @@
   "home.start": "Start",
   "home.title": "Cindy: A lateral thinking salon for every one!",
   "puzzle.creator": "Creator",
+  "puzzle.deleteImageConfirm": "Your are attempting to delete this image. Continue?",
   "puzzle.deleteTagConfirm": "Your are going to delete this tag \"{tag}\". This operation cannot be reverted. Are you sure?",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
