refactor: Change most components to use preset colors

--- a/lang/en.json
+++ b/lang/en.json
@@ -257,6 +257,7 @@
   "setting.sendQuestionTrigger": "Send Question",
   "setting.settings": "Settings",
   "setting.showGrotesqueWarning": "Show Grotesque Warning",
+  "setting.theme": "Color Theme",
   "share.share_puzzle__hashtags": "lateral_thinking",
   "share.share_puzzle__text": "I'm playing lateral puzzle \"{title}\". Come and join me!\n{body}",
   "share.share_puzzle__title": "Join me in the lateral thinking puzzle!",
