--- a/lang/ja.json
+++ b/lang/ja.json
@@ -257,6 +257,7 @@
   "setting.sendQuestionTrigger": "質問",
   "setting.settings": "設定",
   "setting.showGrotesqueWarning": "グロ注意表示",
+  "setting.theme": "テーマ",
   "share.share_puzzle__hashtags": "ウミガメのスープ",
   "share.share_puzzle__text": "ウミガメのスープ「{title}」に参加しています、一緒に水平思考しよう！\n{body}",
   "share.share_puzzle__title": "水平思考問題をやってます！",
