feat: Add public channels

--- a/lang/en.json
+++ b/lang/en.json
@@ -36,6 +36,10 @@
   "awards.title": "Awards Page",
   "channel.description": "A place for users to communicate in Cindy.",
   "channel.title": "Channel: {name}",
+  "channels.description": "Communication square for users",
+  "channels.publicChannels": "Public Channels",
+  "channels.recentChats": "Recent Messages",
+  "channels.title": "Channels",
   "comments.description": "Discover interesting puzzles with comments by users in Cindy!",
   "comments.header": "Comments List",
   "comments.title": "Comments",
@@ -103,6 +107,8 @@
   "components.chat.noLogs": "There are no logs here",
   "components.chat.noSelfDM": "You cannot send message to yourself.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
+  "components.chat.officialChatrooms": "Official Chatrooms",
+  "components.chat.openToPublic": "Open to public",
   "components.chat.publicChatrooms": "Public Chatrooms",
   "components.dialogue.answer": "Answer",
   "components.dialogue.question": "Question",
@@ -190,7 +196,7 @@
   "puzzle.creator": "Creator",
   "puzzle.deleteImageConfirm": "Your are attempting to delete this image. Continue?",
   "puzzle.deleteTagConfirm": "Your are going to delete this tag \"{tag}\". This operation cannot be reverted. Are you sure?",
-  "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
+  "puzzle.description": "Details of puzzle",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
   "puzzle.goToPuzzlePage": "Go To Puzzle Page",
   "puzzle.grotesqueWarning": "WARNING! This puzzle has grotesque descriptions",
@@ -202,11 +208,11 @@
   "puzzle.putSolutionConfirm": "You attempt to put solution. Everyone can see your solution then and you cannot edit the solution any more. This operation cannot be reverted. Continue?",
   "puzzle.putSolutionLongtermYamiConfirm": "You attempt to put solution. Everyone can see your solution then. This operation cannot be reverted. Continue?",
   "puzzle.setGrotesque": "Show grotesque warning",
-  "puzzle.setHidden": "Set As Hidden",
+  "puzzle.setHidden": "Make the puzzle hidden to public",
   "puzzle.setHiddenConfirm": "You attempt to set the puzzle hidden to public. This operation will forcefully solve the puzzle and mark it as solved. You will NOT be able to change the puzzle to undergoing state. Continue?",
   "puzzle.setYami": "Make this puzzle yami",
   "puzzle.solveit": "Can you solve the puzzle?",
-  "puzzle.title": "Puzzles",
+  "puzzle.title": "Puzzle Page",
   "puzzle.unsetGrotesque": "Hide grotesque warning",
   "puzzle.unsetHidden": "Make the puzzle open to public",
   "puzzle.unsetHiddenConfirm": "You attempt to set the puzzle open to public. This operation will mark the puzzle as solved and anyone viewing this page will see the puzzle contents and solution INSTANTLY. You can make this puzzle hidden again afterwards. Continue?",
@@ -228,10 +234,10 @@
   "ranking.userPuzzleRanking": "User Ranking by Puzzles",
   "ranking.userPuzzleRankingWithMonth": "Users with most puzzles in {date}",
   "ranking.weeklyRanking": "Weekly Ranking",
-  "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
+  "replay.description": "Replay Puzzle in Cindy",
   "replay.notExistDescription": "This replay does not exist!",
   "replay.puzzleNotSolved": "You cannot create a replay out of an unsolved puzzle!",
-  "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
+  "replay.title": "Puzzle Replay",
   "replays.description": "Replay old puzzles, as many times as you want",
   "replays.header": "Replays",
   "replays.title": "Puzzle Replays",
@@ -259,14 +265,14 @@
   "setting.showGrotesqueWarning": "Show Grotesque Warning",
   "setting.theme": "Color Theme",
   "share.share_puzzle__hashtags": "lateral_thinking",
-  "share.share_puzzle__text": "I'm playing lateral puzzle \"{title}\". Come and join me!\n{body}",
+  "share.share_puzzle__text": "I'm playing lateral puzzle \"{title}\". Come and join me! {body}",
   "share.share_puzzle__title": "Join me in the lateral thinking puzzle!",
   "share.share_puzzle_solved__hashtags": "lateral_thinking",
-  "share.share_puzzle_solved__text": "Just found an interesting lateral puzzle \"{title}\".\n{body}",
+  "share.share_puzzle_solved__text": "Just found an interesting lateral puzzle \"{title}\". {body}",
   "share.share_puzzle_solved__title": "Found an interesting lateral thinking puzzle!",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
-  "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
+  "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts. Why?",
   "showcases.puzzle.goToSolution": "View Answer",
   "showcases.puzzle.q1": "Is the rubber white?",
   "showcases.puzzle.q2": "Does friction count?",
@@ -323,7 +329,7 @@
   "users.description": "Recently registered users in Cindy",
   "users.header": "Users",
   "users.title": "Users Page",
-  "webNotify.deniedMessage": "Notification seems to be disabled by your browser settings. Cindy will not send you messages.\nIf you find the notifications annoying, simply close the Cindy tab instead of block it. Cindy will not send you notifications when Cindy tab is not open.",
+  "webNotify.deniedMessage": "Notification seems to be disabled by your browser settings. Cindy will not send you messages. If you find the notifications annoying, simply close the Cindy tab instead of block it. Cindy will not send you notifications when Cindy tab is not open.",
   "webNotify.memoUpdated": "Memo for Puzzle \"{puzzle}\" is updated",
   "webNotify.newDMReceived": "You've just received a direct message from {user}",
   "webNotify.newDialogueAdded": "New Question Added",
