--- a/lang/ja.json
+++ b/lang/ja.json
@@ -36,6 +36,10 @@
   "awards.title": "称号一覧ページ",
   "channel.description": "ユーザー交流の場",
   "channel.title": "チャンネル：{name}",
+  "channels.description": "Cindy ユーザー交流の場",
+  "channels.publicChannels": "公開チャンネル",
+  "channels.recentChats": "最新のチャット",
+  "channels.title": "チャットルーム",
   "comments.description": "ユーザーのコメントから面白い水平思考問題を探しましょう！",
   "comments.header": "コメント一覧",
   "comments.title": "コメント一覧",
@@ -103,6 +107,8 @@
   "components.chat.noLogs": "ここにチャットメッセージのログがありません",
   "components.chat.noSelfDM": "あなたは自分にダイレクトメッセージを送信することはできません",
   "components.chat.notExistDescription": "このチャットルームは存在しません",
+  "components.chat.officialChatrooms": "公式チャンネル",
+  "components.chat.openToPublic": "チャンネルを公開",
   "components.chat.publicChatrooms": "公開チャンネル",
   "components.dialogue.answer": "回答",
   "components.dialogue.question": "質問",
