--- a/lang/ja.json
+++ b/lang/ja.json
@@ -169,6 +169,7 @@
   "components.replay.milestone_handle": "ハンドル",
   "components.replay.milestone_name": "名称",
   "components.replay.original": "元問題",
+  "components.user.adminConsole": "管理サイト",
   "components.user.anonymousUser": "謎の料理人",
   "components.user.avatar": "アバター",
   "components.user.commentCount": "コメント数",
