feat: Add kanichat menu button

--- a/lang/en.json
+++ b/lang/en.json
@@ -299,6 +299,7 @@
   "toolbar.eula": "EULA",
   "toolbar.help": "Help",
   "toolbar.home": "Home",
+  "toolbar.kanichat": "External Chatroom",
   "toolbar.licenseHelp": "About license",
   "toolbar.puzzle": "Puzzle",
   "toolbar.settings": "Settings",
