--- a/lang/ja.json
+++ b/lang/ja.json
@@ -299,6 +299,7 @@
   "toolbar.eula": "利用規約",
   "toolbar.help": "ヘルプ",
   "toolbar.home": "ホーム",
+  "toolbar.kanichat": "外部チャット",
   "toolbar.licenseHelp": "ライセンスについて",
   "toolbar.puzzle": "問題",
   "toolbar.settings": "設定",
