--- a/lang/ja.json
+++ b/lang/ja.json
@@ -137,6 +137,7 @@
   "components.puzzle.licenseSummary": "この作品は {license} の下で公開されています。",
   "components.puzzle.memo": "メモ",
   "components.puzzle.nolicenseHint": "あなたから明示的に許可を受けない限り、誰もこの作品を複製・転載・改変できません。",
+  "components.puzzle.noneOrigWarn": "注意：他所ですでにある他人の作った問題の転載は {eula} で禁じられています。これらの問題を遊ぶには、参加者を募集してから、{quiz} の使用をおすすめします。",
   "components.puzzle.quotePlain": "転載元: 「{title}」　作者: {user} (Cindy)　URL: {url}",
   "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solution": "解説文",
@@ -287,6 +288,7 @@
   "toolbar.settings": "設定",
   "toolbar.users": "ユーザー",
   "toolbar.usersOnline": "現在閲覧者数: {count}",
+  "toolbar.utakata": "クイズしよう",
   "toolbar.viewersOnline": "閲覧者数: {count}",
   "toolbar.wiki": "Cindy+Wiki",
   "tooltip.bold": "太文字",
