--- a/lang/ja.json
+++ b/lang/ja.json
@@ -137,7 +137,7 @@
   "components.puzzle.licenseSummary": "この作品は {license} の下で公開されています。",
   "components.puzzle.memo": "メモ",
   "components.puzzle.nolicenseHint": "あなたから明示的に許可を受けない限り、誰もこの作品を複製・転載・改変できません。",
-  "components.puzzle.noneOrigWarn": "注意：他所ですでにある他人の作った問題の転載は {eula} で禁じられています。これらの問題を遊ぶには、参加者を募集してから、{quiz} の使用をおすすめします。",
+  "components.puzzle.noneOrigWarn": "注意：他所ですでにある他人の作った問題の転載は {eula} で禁じられています。これらの問題を遊ぶには、参加者を募集してから、{quiz} のご利用をおすすめします。",
   "components.puzzle.quotePlain": "転載元: 「{title}」　作者: {user} (Cindy)　URL: {url}",
   "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solution": "解説文",
