fix: Replace kanichat with x-feeder chat

--- a/lang/en.json
+++ b/lang/en.json
@@ -282,7 +282,7 @@
   "toolbar.eula": "EULA",
   "toolbar.help": "Help",
   "toolbar.home": "Home",
-  "toolbar.kanichat": "External Chatroom",
+  "toolbar.kanichat": "External Chatroom (Deprecated)",
   "toolbar.licenseHelp": "About license",
   "toolbar.puzzle": "Puzzle",
   "toolbar.settings": "Settings",
@@ -291,6 +291,7 @@
   "toolbar.utakata": "Realtime Quiz",
   "toolbar.viewersOnline": "Viewers: {count}",
   "toolbar.wiki": "Wiki",
+  "toolbar.xfeeder": "External Chatroom",
   "tooltip.bold": "Bold",
   "tooltip.collapse": "Collapse",
   "tooltip.delete": "Delete",
