--- a/lang/ja.json
+++ b/lang/ja.json
@@ -282,7 +282,7 @@
   "toolbar.eula": "利用規約",
   "toolbar.help": "ヘルプ",
   "toolbar.home": "ホーム",
-  "toolbar.kanichat": "外部チャット",
+  "toolbar.kanichat": "外部チャット（閉鎖中）",
   "toolbar.licenseHelp": "ライセンスについて",
   "toolbar.puzzle": "問題",
   "toolbar.settings": "設定",
@@ -291,6 +291,7 @@
   "toolbar.utakata": "クイズしよう",
   "toolbar.viewersOnline": "閲覧者数: {count}",
   "toolbar.wiki": "Cindy+Wiki",
+  "toolbar.xfeeder": "外部チャット",
   "tooltip.bold": "太文字",
   "tooltip.collapse": "縮小表示",
   "tooltip.delete": "取り消し線",
