feat: Add gold puzzles button to help dropdown

--- a/lang/en.json
+++ b/lang/en.json
@@ -280,6 +280,7 @@
   "toolbar.chatroom": "Chatroom",
   "toolbar.communication": "Society",
   "toolbar.eula": "EULA",
+  "toolbar.goldPuzzles": "Gold Puzzles (JP)",
   "toolbar.help": "Help",
   "toolbar.home": "Home",
   "toolbar.kanichat": "External Chatroom (Deprecated)",
