--- a/lang/ja.json
+++ b/lang/ja.json
@@ -280,6 +280,7 @@
   "toolbar.chatroom": "チャットルーム",
   "toolbar.communication": "交流",
   "toolbar.eula": "利用規約",
+  "toolbar.goldPuzzles": "月間優秀問題 (Wiki)",
   "toolbar.help": "ヘルプ",
   "toolbar.home": "ホーム",
   "toolbar.kanichat": "外部チャット（閉鎖中）",
