--- a/lang/en.json
+++ b/lang/en.json
@@ -189,6 +189,7 @@
   "puzzle.deleteImageConfirm": "Your are attempting to delete this image. Continue?",
   "puzzle.deleteTagConfirm": "Your are going to delete this tag \"{tag}\". This operation cannot be reverted. Are you sure?",
   "puzzle.description": "Details of puzzle",
+  "puzzle.fewDialogueHint": "Depending on the date and time, it may take minutes to hours before your puzzle could get enough participants. Take your time, get a cup of tea, or maybe try to share it with your friends on social networks :)",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
   "puzzle.goToPuzzlePage": "Go To Puzzle Page",
   "puzzle.grotesqueWarning": "WARNING! This puzzle has grotesque descriptions",
