--- a/lang/ja.json
+++ b/lang/ja.json
@@ -189,6 +189,7 @@
   "puzzle.deleteImageConfirm": "削除した画像を元に戻すことはできません。続けますか？",
   "puzzle.deleteTagConfirm": "あなたはこのタグ「{tag}」を削除しようとしています。この操作は撤回することができません。続けますか？",
   "puzzle.description": "問題の詳細情報",
+  "puzzle.fewDialogueHint": "出題後、参加者が集まるまでに、時刻や曜日によっては、数十分から数時間かかることがあります。根気よく待ちましょう！SNSでシェアして、友達たちにも参加を勧めてみるのも一つの手です。",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.goToPuzzlePage": "問題ページへ",
   "puzzle.grotesqueWarning": "注意！この問題は残酷な描写があります。続けますか？",
